--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="suggestions">
             <h2>Suggested Commands:</h2>
             <ul>
-                <li>"What is the weather like?"</li>
-                <li>"Tell me a joke."</li>
-                <li>"Write a song about [topic]."</li>
+                <li>"What can you do?"</li>
+                <li>"who created you"</li>
+                <li>"Calculate [value]"</li>
                 <li>"Search for [word]"</li>
                 <li>"Show me sports news."</li>
                 <li>"entertainment news."</li>
